--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Automat==20.2.0
 backoff==2.2.1
 bcrypt==3.2.0
 beautifulsoup4==4.10.0
+black==23.9.1
 blessed==1.20.0
 blinker==1.4
 Brlapi==0.8.3
@@ -102,6 +103,7 @@ msgpack==1.0.7
 multidict==6.0.4
 multiprocess==0.70.15
 munch==4.0.0
+mypy-extensions==1.0.0
 nemo-emblems==5.6.0
 netaddr==0.8.0
 netifaces==0.11.0
@@ -126,9 +128,10 @@ onboard==1.4.1
 opencv-python-headless==4.8.0.76
 ordered-set==4.1.0
 orjson==3.9.7
-packaging==21.3
+packaging==23.2
 PAM==0.4.2
 pandas==2.1.0
+pathspec==0.11.2
 pdfminer.six===-VERSION-
 pexpect==4.8.0
 pikepdf==5.0.1+dfsg
