--- a/requirements.txt
+++ b/requirements.txt
@@ -1,262 +1,40 @@
-aiohttp==3.8.5
-aiosignal==1.3.1
-albumentations==1.3.1
-annotated-types==0.5.0
-anyio==3.7.1
-apt-clone==0.2.1
-apturl==0.5.2
-arrow==1.2.3
-async-timeout==4.0.3
-attrs==21.2.0
-Automat==20.2.0
-backoff==2.2.1
-bcrypt==3.2.0
-beautifulsoup4==4.10.0
-black==23.9.1
-blessed==1.20.0
-blinker==1.4
-Brlapi==0.8.3
-build==0.10.0
-CacheControl==0.13.1
-certifi==2020.6.20
-chardet==4.0.0
-charset-normalizer==3.2.0
-cleo==2.0.1
-click==8.0.3
-cmake==3.27.4.1
-colorama==0.4.4
-coloredlogs==7.3
-colour==0.1.5
-command-not-found==0.3
-configobj==5.0.6
-constantly==15.1.0
-crashtest==0.4.1
-croniter==1.4.1
-cryptography==3.4.8
-cupshelpers==1.0
-daemonize==2.5.0
-datasets==2.14.5
-dateutils==0.6.12
-dbus-python==1.2.18
-deepdiff==6.5.0
-defer==1.0.6
-deluge==2.0.3
-dill==0.3.7
-distlib==0.3.7
-distro==1.7.0
-docker==5.0.3
-docker-compose==1.29.2
-dockerpty==0.4.1
-docopt==0.6.2
-dulwich==0.21.6
+asttokens==2.4.0
+backcall==0.2.0
+comm==0.1.4
+contourpy==1.1.1
+cycler==0.12.1
+debugpy==1.8.0
+decorator==5.1.1
 exceptiongroup==1.1.3
-eyeD3==0.8.10
-fastapi==0.103.1
-filelock==3.12.4
-frozenlist==1.4.0
-fsspec==2023.6.0
-GeoIP==1.3.2
-grpcio==1.30.2
-h11==0.14.0
-html5lib==1.1
-httplib2==0.20.2
-huggingface-hub==0.17.1
-humanfriendly==10.0
-hyperlink==21.0.0
-idna==3.3
-ifaddr==0.1.7
-imageio==2.31.3
-IMDbPY==2021.4.18
-img2pdf==0.4.2
-importlib-metadata==6.8.0
-incremental==21.3.0
-inquirer==3.1.3
-installer==0.7.0
-itsdangerous==2.1.2
-jaraco.classes==3.3.0
-jeepney==0.7.1
-Jinja2==3.1.2
-joblib==1.3.2
-jsonschema==4.17.3
-keyring==24.2.0
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lazy_loader==0.3
-Levenshtein==0.21.1
-libtorrent===2.0.5-build-libtorrent-rasterbar-qrM5vM-libtorrent-rasterbar-2.0.5-bindings-python
-lightning==2.0.8
-lightning-cloud==0.5.37
-lightning-utilities==0.9.0
-lit==16.0.6
-louis==3.20.0
-lxml==4.8.0
-macaroonbakery==1.3.1
-Mako==1.1.3
-markdown-it-py==3.0.0
-MarkupSafe==2.0.1
-mdurl==0.1.2
-more-itertools==8.10.0
-mpmath==1.3.0
-msgpack==1.0.7
-multidict==6.0.4
-multiprocess==0.70.15
-munch==4.0.0
-mypy-extensions==1.0.0
-nemo-emblems==5.6.0
-netaddr==0.8.0
-netifaces==0.11.0
-networkx==3.1
-nltk==3.8.1
-notify2==0.3
-numpy==1.25.2
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cufft-cu11==10.9.0.58
-nvidia-curand-cu11==10.2.10.91
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-nccl-cu11==2.14.3
-nvidia-nvtx-cu11==11.7.91
-oauthlib==3.2.0
-ocrmypdf==13.4.0+dfsg
-onboard==1.4.1
-opencv-python-headless==4.8.0.76
-ordered-set==4.1.0
-orjson==3.9.7
+executing==2.0.0
+fonttools==4.43.1
+ipykernel==6.26.0
+ipython==8.16.1
+jedi==0.19.1
+jupyter_client==8.5.0
+jupyter_core==5.4.0
+kiwisolver==1.4.5
+matplotlib==3.8.0
+matplotlib-inline==0.1.6
+nest-asyncio==1.5.8
+numpy==1.26.1
 packaging==23.2
-PAM==0.4.2
-pandas==2.1.0
-pathspec==0.11.2
-pdfminer.six===-VERSION-
+parso==0.8.3
 pexpect==4.8.0
-pikepdf==5.0.1+dfsg
-Pillow==9.0.1
-pkginfo==1.9.6
+pickleshare==0.7.5
+Pillow==10.1.0
 platformdirs==3.11.0
-pluggy==0.13.0
-poetry==1.6.1
-poetry-core==1.7.0
-poetry-plugin-export==1.5.0
-protobuf==3.12.4
-psutil==5.9.0
+prompt-toolkit==3.0.39
+psutil==5.9.6
 ptyprocess==0.7.0
-pyarrow==13.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.1
-pycairo==1.20.1
-pycups==2.0.1
-pycurl==7.44.1
-pydantic==2.1.1
-pydantic_core==2.4.0
-pyelftools==0.27
-pyenchant==3.2.0
-pygame==2.1.2
+pure-eval==0.2.2
 Pygments==2.16.1
-PyGObject==3.42.1
-PyHamcrest==2.0.2
-PyICU==2.8.1
-pyinotify==0.9.6
-PyJWT==2.3.0
-pymacaroons==0.13.0
-PyMuPDF==1.23.3
-PyMuPDFb==1.23.3
-PyNaCl==1.5.0
-pyOpenSSL==21.0.0
-pyparsing==2.4.7
-pyparted==3.11.7
-pyproject_hooks==1.0.0
-PyQt5==5.15.6
-PyQt5-sip==12.9.1
-PyQtWebEngine==5.15.5
-pyRFC3339==1.1
-pyrsistent==0.18.1
-python-apt==2.4.0+ubuntu2
+pyparsing==3.1.1
 python-dateutil==2.8.2
-python-debian==0.1.43+ubuntu1.1
-python-dotenv==0.19.2
-python-editor==1.0.4
-python-gnupg==0.4.8
-python-Levenshtein==0.21.1
-python-magic==0.4.24
-python-multipart==0.0.6
-python-xlib==0.29
-pytorch-lightning==2.0.8
-pytz==2022.1
-pyudev==0.22.0
-PyWavelets==1.4.1
-pyxdg==0.27
-PyYAML==5.4.1
-qudida==0.0.4
-rapidfuzz==2.15.1
-readchar==4.0.5
-regex==2023.8.8
-rencode==1.0.6
-reportlab==3.6.8
-requests==2.31.0
-requests-file==1.5.1
-requests-toolbelt==1.0.0
-rich==13.5.2
-ruamel.yaml==0.17.32
-ruamel.yaml.clib==0.2.7
-safetensors==0.3.3
-scikit-image==0.21.0
-scikit-learn==1.3.0
-scipy==1.11.2
-sconf==0.2.5
-screen-resolution-extra==0.0.0
-SecretStorage==3.3.1
-sentencepiece==0.1.99
-service-identity==18.1.0
-setproctitle==1.2.2
-shellingham==1.5.3
+pyzmq==25.1.1
 six==1.16.0
-sniffio==1.3.0
-soupsieve==2.3.1
-starlette==0.27.0
-starsessions==1.3.0
-sympy==1.12
-systemd-python==234
-texttable==1.6.4
-threadpoolctl==3.2.0
-tifffile==2023.8.30
-timm==0.5.4
-tinycss2==1.1.1
-tldextract==3.1.2
-tokenizers==0.13.3
-tomli==2.0.1
-tomlkit==0.12.1
-torch==2.0.1
-torchmetrics==1.1.2
-torchvision==0.15.2
+stack-data==0.6.3
+tornado==6.3.3
 tqdm==4.66.1
-traitlets==5.9.0
-transformers==4.33.1
-triton==2.0.0
-trove-classifiers==2023.9.19
-Twisted==22.1.0
-typing_extensions==4.7.1
-tzdata==2023.3
-ubuntu-drivers-common==0.0.0
-ufw==0.36.1
-Unidecode==1.3.3
-urllib3==1.26.5
-uvicorn==0.23.2
-virtualenv==20.24.5
-wadllib==1.3.6
-wcwidth==0.2.6
-webencodings==0.5.1
-websocket-client==1.2.3
-websockets==11.0.3
-xdg==5
-xkit==0.0.0
-xlrd==1.2.0
-xxhash==3.3.0
-yarl==1.9.2
-youtube-dl==2021.12.17
-zipp==1.0.0
-zope.interface==5.4.0
+traitlets==5.12.0
+wcwidth==0.2.8
